fix column wrap

--- a/src/layout/grid.less
+++ b/src/layout/grid.less
@@ -26,7 +26,8 @@
     }
 
     &.is-mobile-reversed {
-        flex-direction: column-reverse;
+        flex-wrap     : wrap-reverse;
+        flex-direction: inherit;
 
         /* For all devices larger than @mobile */
         @media screen and (min-width: @tablet) {
